overflow issue fixed

--- a/src/sass/layout/full-screen-section.scss
+++ b/src/sass/layout/full-screen-section.scss
@@ -3,8 +3,8 @@
 .section--full-screen {
   position: absolute;
   inset: 0;
-  width: 100dvw;
-  min-height: 100dvh;
+  width: 100%;
+  height: 100%;
   display: grid;
   align-items: center;
   z-index: 1;
